--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -2,7 +2,7 @@
 
 {% block body%}
 
-<div class="glass_container">
+<div class="glass_container_login glass_container">
     <div class="login_box">
         <h2>Login</h2>
         <form action="{{ url_for('login') }}" method="post">
