about to start a reset password quest

--- a/static/login_style.css
+++ b/static/login_style.css
@@ -1,4 +1,4 @@
-/* Would like to give full credit for this css to https://www.youtube.com/watch?v=Jh40uRabHcI */
+/* Would like to give partial credit for this css to https://www.youtube.com/watch?v=Jh40uRabHcI */
 
 * {
     margin: 0;
