--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -20,7 +20,7 @@
                 {% endif %}
             {% endwith %}
             <div id="sidebar">
-                <h1>Catch</h1>
+                <h1>𝓒𝓪𝓽𝓬𝓱</h1>
                 <ul>
                     <li>
                         <a href="{{ url_for('index') }}" class="nav_item">
