--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,19 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrollbar */
+    background-image: url('images/main_page_background_1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba(255,255,255,0.3);
+    background-blend-mode: lighten;
+    padding-bottom: 100px;
+}
+
 /* CSS STYLING FOR THE LOGIN + REGISTER PAGES */
 
 #login_wrapper {
@@ -147,7 +160,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 0;
     margin-left: clamp(200px, 20%, 300px); /* Leaves space for the sidebar */
     width: calc(100% - clamp(200px, 20%, 300px)); /* Prevents overlap */
     position: relative;
@@ -212,7 +225,7 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -242,10 +255,9 @@
 .fish_ai_insert {
     position: absolute;
     top: 0;
-    left: clamp(150px, 20%, 300px); /* Leaves space for the sidebar */
-    width: calc(100% - clamp(150px, 20%, 300px)); /* Prevents overlap with the sidebar */
+    left: clamp(150px, 25%, 300px); /* Leaves space for the sidebar */
+    width: calc(100% - clamp(150px, 25%, 300px)); /* Prevents overlap with the sidebar */
     height: 100%;
-    border: 1px solid black; /* Remove default border */
 }
 
 /* CSS STYLING FOR FISH-DEX */
