--- a/static/style.css
+++ b/static/style.css
@@ -222,7 +222,7 @@ body {
 .post {
     position: relative;
     background-color: #fff;
-    padding: 20px;
+    padding: 20px 0;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
@@ -231,7 +231,6 @@ body {
 
 .post img {
     max-width: 100%;
-    border-radius: 10px;
     margin-bottom: 10px;
     max-height: 300px;
     height: auto;
@@ -242,6 +241,7 @@ body {
     margin: 0;
     text-align: left;
     flex-grow: 1;
+    padding-left: 20px;
 }
 
 .post h4 {
@@ -282,6 +282,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.fish_card:hover {
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    transition: background 0.3s, box-shadow 0.3s;
 }
 
 .fish_card img {
