--- a/static/style.css
+++ b/static/style.css
@@ -324,15 +324,48 @@ body {
     margin-bottom: 20px;
 }
 
-.profile_image {
+.profile_image_wrapper {
+    position: relative;
     width: 150px;
     height: 150px;
     border-radius: 50%;
     margin-right: 20px;
+    overflow: hidden;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.profile_details {
-    flex-grow: 1;
+.profile_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: filter 0.3s ease-in-out;
+}
+
+.profile_overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.profile_image_wrapper:hover .profile_overlay {
+    opacity: 1;
+}
+
+.profile_overlay ion-icon {
+    color: white;
+    font-size: 30px;
 }
 
 .profile_details h1 {
