--- a/static/style.css
+++ b/static/style.css
@@ -104,10 +104,6 @@ body {
     animation-delay: 0.5s; /* Delay for the fifth item */
 }
 
-#sidebar li:nth-child(6) {
-    animation-delay: 0.6s; /* Delay for the fifth item */
-}
-
 @keyframes fadeIn {
     to {
         opacity: 1; /* Fade in to full opacity */
@@ -316,6 +312,10 @@ body {
 .profile_container {
     margin: 0 auto;
     padding: 20px;
+}
+
+.profile_container h3{
+    text-align: center;
 }
 
 .profile_header {
