--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,6 +15,7 @@
                 <button class="edit_profile_btn" onclick="openEditProfileModal()">Edit Profile</button>
             </div>
         </div>
+        <h3>--- Posts ---</h3>
         <div class="posts">
             {% for post in user_posts %}
                 <div class="post">
@@ -51,8 +52,10 @@
             <h2>Edit Profile</h2>
             <form id="editProfileForm" action="{{ url_for('edit_profile') }}" method="post">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                <label for="username">Username:</label>
+                <label for="username">Username: *</label>
                 <input type="text" id="username" name="username" value="{{ user_data[1] }}" required>
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email" value="{{ user_data[3] }}" required>
                 <button type="submit">Save Changes</button>
             </form>
         </div>
