--- a/static/login_style.css
+++ b/static/login_style.css
@@ -29,15 +29,31 @@ body {
 
 .glass_container_login {
     height: 350px;
-    animation: shrink 0.5s ease-out forwards; /* Animation for shrinking the box */
+    animation: shrink1 0.5s ease-out forwards; /* Animation for shrinking the box */
 }
 
 .glass_container_register {
     height: 400px;
-    animation: expand 0.5s ease-out forwards; /* Animation for expanding the box */
+    animation: expand1 0.5s ease-out forwards; /* Animation for expanding the box */
 }
 
-@keyframes shrink {
+.glass_container_mfa {
+    height: 200px;
+    animation: shrink2 0.5s ease-out forwards; /* Animation for expanding the box */
+}
+
+.glass_container_mfa_setup {
+    height: 450px;
+    animation: expand2 0.5s ease-out forwards; /* Animation for expanding the box */
+}
+
+.glass_container_mfa_setup img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain; /* Ensure the image fits within the box without expanding */
+}
+
+@keyframes shrink1 {
     0% {
         height: 400px;
     }
@@ -46,13 +62,33 @@ body {
     }
 }
 
+@keyframes shrink2 {
+    0% {
+        height: 350px;
+    }
+    100% {
+        height: 200px;
+    }
+}
 
-@keyframes expand {
+
+@keyframes expand1 {
     0% {
         height: 350px;
     }
     100% {
         height: 400px;
+    }
+}
+
+@keyframes expand2 {
+    0% {
+        height: 350px;
+        width: 300px;
+    }
+    100% {
+        height: 450px;
+        width: 400px;
     }
 }
 
@@ -67,13 +103,41 @@ body {
     z-index: -1;
 }
 
-.login_box, .register_box {
+.login_box, .register_box, .MFA_box, .MFA_setup_box {
     max-width: 250px;
     margin: 0 auto;
     text-align: center;
     opacity: 0; /* Start with content hidden */
     animation: fadeIn 0.5s ease-out forwards; /* Fade in content */
     animation-delay: 0.5s; /* Delay to match the box expansion */
+}
+
+.MFA_setup_box h2 {
+    margin-bottom: 20px;
+}
+
+.MFA_setup_box p {
+    margin-bottom: 20px;
+}
+
+.MFA_setup_box a {
+    color: white;
+    text-decoration: none;
+}
+
+.mfa_button {
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.mfa_button:hover {
+    background-color: darkblue;
 }
 
 @keyframes fadeIn {
