--- a/static/style.css
+++ b/static/style.css
@@ -225,6 +225,11 @@ body {
     text-align: center;
 }
 
+.posts h2 {
+    text-align: center;
+    vertical-align: center;
+}
+
 .post img {
     max-width: 100%;
     margin-bottom: 10px;
