--- a/templates/index.html
+++ b/templates/index.html
@@ -23,13 +23,17 @@
         </div>
     {% endif %}
     <div class="posts">
-        {% for post in posts %}
-            <div class="post">
-                <h4>{{ post[2] }}</h4>
-                <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
-                <p>{{ post[1] }}</p>
-            </div>
-        {% endfor %}
+        {% if posts %}
+            {% for post in posts %}
+                <div class="post">
+                    <h4>{{ post[2] }}</h4>
+                    <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
+                    <p>{{ post[1] }}</p>
+                </div>
+            {% endfor %}
+        {% else %}
+            <h2>Be the first to make a post!</h2>
+        {% endif %}
     </div>
 
     <script>
