--- a/templates/setup_mfa.html
+++ b/templates/setup_mfa.html
@@ -1,4 +1,14 @@
-<h2>Scan QR Code</h2>
-<img src="{{ qr_path }}" alt="QR Code">
-<p>Scan with Microsoft Authenticator and enter the 6-digit code at login.</p>
-<a href="/logout">Log out</a>
+{% extends 'login_layout.html' %}
+
+{% block body %}
+
+<div class="glass_container_mfa_setup glass_container">
+    <div class="MFA_setup_box">
+        <h2>Scan QR Code</h2>
+        <img src="{{ qr_path }}" alt="QR Code">
+        <p>Scan with Microsoft Authenticator and enter the 6-digit code at login.</p>
+        <a href="{{ url_for('verify_mfa') }}" class="mfa_button">Continue</a>
+    </div>
+</div>
+
+{% endblock %}
