--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fishing App</title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='login_style.css') }}">
 </head>
 <body>
