--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Fishing App{% endblock %}</title>
+        <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -24,39 +25,39 @@
                 <ul>
                     <li>
                         <a href="{{ url_for('index') }}" class="nav_item">
-                            <ion-icon name="home-outline"></ion-icon>
+                            <ion-icon name="home-outline" class="nav_1"></ion-icon>
                             Feed
                         </a>
                     </li>
                     <li>
                         <a href="{{ url_for('fish_identifier') }}" class="nav_item">
-                            <ion-icon name="search-outline"></ion-icon>
+                            <ion-icon name="search-outline" class="nav_2"></ion-icon>
                             Identifier
                         </a>
                     </li>
                     <li>
-                        <a href="{{ url_for('fish_dex') }}" class="nav_item">
-                            <ion-icon name="book-outline"></ion-icon>
+                        <a href="{{ url_for('fish_dex') }}" class="nav_item nav_3">
+                            <ion-icon name="book-outline" class="nav_3"></ion-icon>
                             Fish-Dex
                         </a>
                     </li>
                     {% if 'user_id' in session %}
                         <li>
-                            <a href="{{ url_for('profile') }}" class="username_btn">
-                                <ion-icon name="person-circle-outline"></ion-icon>
+                            <a href="{{ url_for('profile') }}" class="username_btn nav_4">
+                                <ion-icon name="person-circle-outline" class="nav_4"></ion-icon>
                                 {{ session['username'] }}
                             </a>
                         </li>
                         <li>
                             <a href="{{ url_for('logout') }}" class="logout_btn">
-                                <ion-icon name="exit-outline"></ion-icon>
+                                <ion-icon name="exit-outline" class="nav_5"></ion-icon>
                                 Logout
                             </a>
                         </li>
                     {% else %}
                         <li>
                             <a href="{{ url_for('login') }}" class="login_btn">
-                                <span><ion-icon name="person-circle-outline"></ion-icon></span>
+                                <span><ion-icon name="person-circle-outline" class="nav_4"></ion-icon></span>
                                 Login
                             </a>
                         </li>
