--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,7 @@
                 <button class="edit_profile_btn" onclick="openEditProfileModal()">Edit Profile</button>
             </div>
         </div>
-        <h3>--- Posts ---</h3>
+        <h3>--- Posts <span class="hidden_info">- Tap to Edit </span>---</h3>
         <div class="posts">
             {% for post in user_posts %}
                 <div class="post">
