--- a/static/login_style.css
+++ b/static/login_style.css
@@ -1,5 +1,3 @@
-/* Would like to give partial credit for this css to https://www.youtube.com/watch?v=Jh40uRabHcI */
-
 * {
     margin: 0;
     box-sizing: border-box;
@@ -7,13 +5,14 @@
 }
 
 body {
-    margin: 0;
+    min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-image: url('images/background-login-image-6.jpg');
     background-size: cover;
+    background-position: center;
 }
 
 .glass_container {
