--- a/templates/fish_dex.html
+++ b/templates/fish_dex.html
@@ -4,7 +4,7 @@
 
 <div id="content">
     
-    <h1>Fish Dex - Collect them all!</h1>
+    <h1>Fish Dex - Catch them all!</h1>
 
     <h3>--- Caught Fish ---</h3>
 
