--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -11,6 +11,10 @@
             <input type="password" id="password" name="password" placeholder="Password *" required>
             <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password *" required>
             <input type="email" id="email" name="email" placeholder="Email">
+            <div class="mfa_checkbox">
+                <input type="checkbox" id="mfa" name="mfa">
+                <label for="mfa">Activate MFA</label>
+            </div>
             <button type="submit">Register</button>
             <p>Already have an account? <a href="/login" id="login">Login</a></p>
         </form>
