--- a/static/style.css
+++ b/static/style.css
@@ -496,6 +496,7 @@ body {
     background-color: #007bff;
     color: white;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .modal-content button:hover {
@@ -521,7 +522,6 @@ body {
     position: fixed;
     bottom: 20px;
     left: (50% + clamp(150px, 20%, 300px));
-    transform: translateX(-50%);
     background-color: #007bff;
     color: white;
     border: none;
@@ -569,8 +569,12 @@ table tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
+table tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
 table tr:hover {
-    background-color: #f1f1f1;
+    background-color: lightgrey;
 }
 
 table a {
