--- a/static/login_style.css
+++ b/static/login_style.css
@@ -1,5 +1,3 @@
-/* Would like to give partial credit for this css to https://www.youtube.com/watch?v=Jh40uRabHcI */
-
 * {
     margin: 0;
     box-sizing: border-box;
@@ -7,13 +5,14 @@
 }
 
 body {
-    margin: 0;
+    min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-image: url('images/background-login-image-6.jpg');
     background-size: cover;
+    background-position: center;
 }
 
 .glass_container {
@@ -51,6 +50,15 @@ body {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain; /* Ensure the image fits within the box without expanding */
+}
+
+
+.mfa_checkbox {
+    color: white;
+}
+
+.mfa_checkbox input[type="checkbox"] {
+    margin-right: 10px;
 }
 
 @keyframes shrink1 {
